--- a/image-effects/effect-2/style.css
+++ b/image-effects/effect-2/style.css
@@ -28,9 +28,8 @@ img {
   justify-content: center;
   align-items: center;
   color: white;
-  opacity: 0;
   transition: all 0.5s;
-  background: rgba(0, 0, 0, 0);
+  transform: translateX(-100%);
 }
 
 .caption h1 {
@@ -44,10 +43,10 @@ img {
 }
 
 .container:hover .caption {
-  opacity: 1;
-  background: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
+  transform: translateX(0);
 }
 
 .container:hover img {
-  transform: scale(1.3) rotate(15deg);
+  transform: scale(1.3) rotate(-15deg);
 }
