--- a/image-effects/effect-3/style.css
+++ b/image-effects/effect-3/style.css
@@ -15,6 +15,7 @@ body {
 
 img {
   width: 100%;
+  transition: all 0.5s;
 }
 
 .caption {
@@ -28,9 +29,9 @@ img {
   justify-content: center;
   align-items: center;
   color: white;
-  opacity: 0;
   transition: all 0.5s;
-  background: rgba(0, 0, 0, 0);
+  background-color: black;
+  transform: translateX(-100%);
 }
 
 .caption h1 {
@@ -44,10 +45,9 @@ img {
 }
 
 .container:hover .caption {
-  opacity: 1;
-  background: rgba(0, 0, 0, 0.5);
+  transform: translateX(0);
 }
 
 .container:hover img {
-  transform: scale(1.3) rotate(15deg);
+  transform: translateX(100%);
 }
