--- a/image-effects/effect-4/style.css
+++ b/image-effects/effect-4/style.css
@@ -15,22 +15,23 @@ body {
 
 img {
   width: 100%;
+  transition: all 0.5s;
 }
 
 .caption {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
-  height: 100%;
+  height: 30%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: white;
-  opacity: 0;
   transition: all 0.5s;
-  background: rgba(0, 0, 0, 0);
+  background-color: black;
+  transform: translateY(100%);
 }
 
 .caption h1 {
@@ -44,10 +45,9 @@ img {
 }
 
 .container:hover .caption {
-  opacity: 1;
-  background: rgba(0, 0, 0, 0.5);
+  transform: translateY(0);
 }
 
 .container:hover img {
-  transform: scale(1.3) rotate(15deg);
+  transform: translateY(-30%);
 }
